# hecate

./: .env.example  .gitattributes  .readthedocs.yaml  CHANGELOG.md  README.md  SECURITY.md  docker-compose.yml.example  mkdocs.yml
.gitea/workflows/: build.yml
.github/workflows/: build-images.yml  release.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: cli.py  main.py
backend/app/core/: config.py  passwords.py  write_auth.py
backend/app/db/: opensearch.py
backend/app/mcp/: server.py
backend/app/models/: inventory_item.py  scan.py
backend/app/repositories/: app_settings_repository.py  saved_search_repository.py  scan_finding_repository.py  scan_repository.py  (+3 more)
backend/tests/: test_inventory_matcher.py  test_scan_service_features.py
docs/: architecture.md  changelog.md  configuration.md  getting-started.md  index.md  requirements.txt  sca-scanning.md  security-access-control.md
docs/admin/: audit.md  system.md
docs/assets/: extra.css
docs/guide/: ai-analysis.md  dashboard.md  inventory.md  overview.md  search.md  statistics.md  vulnerabilities.md
docs/integrations/: api.md  cicd.md  mcp.md  notifications.md
docs/sca/: attack-chain.md  licenses.md  malware.md  scan-results.md
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/src/: router.tsx  styles.css  types.ts
scanner/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
scanner/app/: hecate_analyzer.py  main.py  models.py  provenance.py  scanners.py
scanner/tests/: test_scanner_fixes.py  test_source_checkout.py
(+67 files in other folders)
