[tool.poetry]
name = "hecate-scanner"
version = "1.2.3"
description = "Scanner sidecar for Hecate SCA scanning (Trivy, Grype, Syft, OSV Scanner)."
authors = ["Hecate Team <devnull@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
pyyaml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tests are not part of the runtime image (Dockerfile runs `poetry install
# --only main`). Run locally with: `pip install pytest pytest-asyncio httpx`
# then `poetry run pytest` (httpx is present in the prod image via semgrep).
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
